[gd_scene load_steps=6 format=3 uid="uid://ba32hbbx2a0lm"]

[ext_resource type="Script" uid="uid://3354cl177bs0" path="res://scenes/ingame_overlay.gd" id="1_gumgw"]
[ext_resource type="Texture2D" uid="uid://mk504a8671sg" path="res://resources/art/reputation_thumb.png" id="2_2qsp4"]
[ext_resource type="Material" uid="uid://cekchnvy84rs0" path="res://resources/shaders/preset_colors/color_ui.tres" id="2_6uvmq"]
[ext_resource type="Texture2D" uid="uid://bqcatyhrp8jr6" path="res://resources/art/heart.png" id="2_fce62"]
[ext_resource type="Texture2D" uid="uid://dnv6tmda4xwkh" path="res://resources/art/duck_baby.png" id="4_fce62"]

[node name="IngameOverlay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_gumgw")

[node name="TopRight" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Reputation" type="HBoxContainer" parent="TopRight"]
layout_mode = 2
alignment = 2

[node name="Thumb1" type="TextureRect" parent="TopRight/Reputation"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("2_fce62")
expand_mode = 4

[node name="Thumb2" type="TextureRect" parent="TopRight/Reputation"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("2_fce62")
expand_mode = 4

[node name="Thumb3" type="TextureRect" parent="TopRight/Reputation"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
texture = ExtResource("2_fce62")
expand_mode = 4

[node name="CurrentScoreWrapper" type="HBoxContainer" parent="TopRight"]
layout_mode = 2
alignment = 2

[node name="ScoreThumb" type="TextureRect" parent="TopRight/CurrentScoreWrapper"]
material = ExtResource("2_6uvmq")
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture = ExtResource("2_2qsp4")
expand_mode = 3

[node name="PlaceholderText" type="Label" parent="TopRight/CurrentScoreWrapper"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ": "

[node name="CurrentScore" type="Label" parent="TopRight/CurrentScoreWrapper"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "60"

[node name="Instructions" type="Label" parent="TopRight"]
layout_mode = 2
text = "Hold <Space> to dip down
Press <D> to drop baby
Catch babies before they burn
Then deliver them!"
horizontal_alignment = 2

[node name="Middle" type="Control" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Middle"]
layout_mode = 0
offset_left = 341.0
offset_top = 215.0
offset_right = 813.0
offset_bottom = 404.0
color = Color(0.044506766, 0.013339454, 0.15262637, 0.72156864)

[node name="Control" type="Control" parent="Middle/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.5
offset_top = 98.0
offset_right = 90.5
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentFinalScore" type="Label" parent="Middle/ColorRect/Control"]
layout_mode = 0
offset_left = 13.0
offset_top = -103.0
offset_right = 221.0
offset_bottom = -25.0
theme_override_font_sizes/font_size = 48
text = "Score: 50"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Middle/ColorRect/Control"]
layout_mode = 0
offset_left = 23.5
offset_top = -160.0
offset_right = 208.0
offset_bottom = -120.0
theme_override_font_sizes/font_size = 24
text = "New high score!"
horizontal_alignment = 1

[node name="Instructions" type="MarginContainer" parent="Middle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.5
offset_top = -143.0
offset_right = 190.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 48

[node name="Instructions" type="Label" parent="Middle/Instructions"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Press <Space> to start
Press <Esc> to main menu"
horizontal_alignment = 1

[node name="TopLeft" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="FirstInLineDummyText" type="Label" parent="TopLeft"]
layout_mode = 2
text = "First in line:"

[node name="CurrentScoreWrapper" type="HBoxContainer" parent="TopLeft"]
layout_mode = 2

[node name="NextColor" type="TextureRect" parent="TopLeft/CurrentScoreWrapper"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("4_fce62")
expand_mode = 3
flip_h = true

[node name="Capacity" type="Label" parent="TopLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Capacity: 0 / 5"
